# ez2source

./: Dockerfile  README.md  accessibility-improvements.css  ai_service.py  analytics_service.py  app.py  app.yaml  calendar_service.py  candidate_notification_service.py  cloudbuild.yaml  cover_letter_service.py  cv_checker_service.py  deploy.sh  enhanced-form-validation.js  enhanced_email_service.py  form_validation_service.py  google-cloud-setup.json  hr_registration_service.py  interview-autocomplete.js  interview-fix.css  interview_feedback_service.py  location-autocomplete-debug.js  main-fixed.js  main.py  maintenance.html  manifest-recruiter.json  messaging_service.py  modal-fix.js  models.py  organization_assignment_service.py  pwa-manager.js  pyproject.toml  resume_builder_service.py  resume_parser.py  routes.py  routes_mobile.py  static  style.css  sw-candidate.js  sw-recruiter.js  (+4 more)
static/: manifest-candidate.json  sw.js
templates/: 404.html  500.html  add_candidate.html  admin_interviews.html  admin_panel.html  advanced_analytics.html  analytics_dashboard.html  apply_interview.html  assign_organization.html  audit_logs.html  base.html  bulk_email.html  bulk_schedule.html  candidate_acquisition.html  candidate_analytics.html  candidate_completed_interviews.html  candidate_dashboard.html  candidate_invitations.html  candidate_onboarding.html  candidate_profile.html  candidate_public_interviews.html  candidate_register.html  candidate_resume_register.html  candidate_schedule.html  chat_interview.html  comparison_table.html  cover_letter_editor.html  cv_checker.html  (+53 more)
(+38 files in other folders)
