[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "email-validator>=2.2.0",
    "flask-dance>=7.1.0",
    "flask>=3.1.1",
    "flask-sqlalchemy>=3.1.1",
    "gunicorn>=23.0.0",
    "openai>=1.82.1",
    "psycopg2-binary>=2.9.10",
    "flask-login>=0.6.3",
    "oauthlib>=3.2.2",
    "pyjwt>=2.10.1",
    "sqlalchemy>=2.0.41",
    "werkzeug>=3.1.3",
    "requests>=2.32.3",
    "sendgrid>=6.12.3",
    "twilio>=9.6.2",
    "google-auth-httplib2>=0.2.0",
    "google-auth-oauthlib>=1.2.2",
    "python-dateutil>=2.9.0.post0",
    "pytz>=2025.2",
    "google-api-python-client>=2.170.0",
    "google-auth>=2.40.2",
    "trafilatura>=2.0.0",
    "beautifulsoup4>=4.13.4",
    "schedule>=1.2.2",
    "pypdf2>=3.0.1",
    "python-docx>=1.2.0",
    "pypdf>=5.7.0",
    "pdfplumber>=0.11.7",
    "weasyprint>=65.1",
    "docx>=0.2.4",
    "httpcore>=1.0.9",
    "httpx>=0.28.1",
    "qrcode[pil]>=8.2",
    "jinja2>=3.1.6",
    "pyotp>=2.9.0",
    "passlib>=1.7.4",
]
